--- a/src/main/resources/applicaton.properties
+++ b/src/main/resources/applicaton.properties
@@ -1,5 +1,5 @@
 hibernate.connection.driver_class=com.mysql.cj.jdbc.Driver
-hibernate.connection.url=jdbc:mysql://localhost:3306/dep9_orm?createDatabaseIfNotExist=true
+hibernate.connection.url=jdbc:mysql://localhost:3306/dep9_uploadFile?createDatabaseIfNotExist=true
 hibernate.connection.username=root
 hibernate.connection.password=Rashmi@1997
 
